unpackaged/main/default/objects/Account/fields/ABM_Emails__c.field-meta.xml
<CustomField>
    <fullName>ABM_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ABM Emails</label>
    <type>Checkbox</type>
</CustomField>