unpackaged/main/default/objects/Account/fields/Account_Health__c.field-meta.xml
<CustomField>
    <fullName>Account_Health__c</fullName>
    <description>This field captures the health of the account, based on a mix of data and assessment by Customer Success. It is populated by Catalyst.</description>
    <inlineHelpText>Green = Healthy, Yellow = neutral with no reason to assume a large churn will happen, Red = a churn is probably without intervention.</inlineHelpText>
    <label>Account Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>