unpackaged/main/default/objects/Account/fields/Account_Health_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_Reason__c</fullName>
    <label>Account Health Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Health__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M&amp;A / Reorg</fullName>
            </value>
            <value>
                <fullName>Loss of champion</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Unresponsive: Customer has not engaged via email or zoom (3x)</fullName>
            </value>
            <value>
                <fullName>Product: RA, feature requests, bug, escalations, stability</fullName>
            </value>
            <value>
                <fullName>Lack of Adoption: Customer hasn't adopted Enterprise features and would be fine on OSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>