unpackaged/main/default/objects/Account/fields/Account_Heat_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_Heat_Rating__c</fullName>
    <formula>IF 
   (AND(Behavior_Heat_Rating__c &lt; 20, Status__c = "Customer"),20,

IF 
   (AND (Behavior_Heat_Rating__c &lt; 20, Count_of_Lost_Opps__c + Count_of_Won_Opps__c &lt; Count_of_Opps__c),20,

IF 

(AND(Behavior_Heat_Rating__c &lt; 10, Count_of_Opps__c &gt; 0),10,

IF 

(AND(Behavior_Heat_Rating__c &lt; 10,  Opt_In_Leads_Contacts__c  &gt; 0),10,


IF (Behavior_Heat_Rating__c &gt; 30,30,

Behavior_Heat_Rating__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Behavior Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>