unpackaged/main/default/objects/Account/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>This calculates the Account's Segment based on the Committed ARR guidelines:
25-75k: Low Touch, 75k-250K Medium Touch, 250K+ High Touch.</description>
    <inlineHelpText>This calculates the Account's Segment based on the Committed ARR guidelines:
25-75k: Low Touch, 75k-250K Medium Touch, 250K+ High Touch.</inlineHelpText>
    <label>Account Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>