unpackaged/main/default/objects/Account/fields/Active_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_Owner__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Owner</label>
    <type>Checkbox</type>
</CustomField>