unpackaged/main/default/objects/Account/fields/admin_panel_link__c.field-meta.xml
<CustomField>
    <fullName>admin_panel_link__c</fullName>
    <formula>IF( G_Com_Org_Slug__c = "", "-",  HYPERLINK("https://admin.grafana.com/orgs/" &amp; G_Com_Org_Slug__c, G_Com_Org_Slug__c , "_blank") )</formula>
    <label>Admin Panel</label>
    <type>Text</type>
</CustomField>