unpackaged/main/default/objects/Account/fields/ARR_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>ARR_At_Risk__c</fullName>
    <description>The ARR at risk for risky accounts.</description>
    <label>ARR At Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>