unpackaged/main/default/objects/Account/fields/Behavior_Heat_Rating__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Heat_Rating__c</fullName>
    <description>This field is calculated in LeanData and selects the highest score from matched leads and contacts on the account</description>
    <label>Behavior Rating from Lead/Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>