unpackaged/main/default/objects/Account/fields/Behavior_Status__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Status__c</fullName>
    <formula>IF( Account_Heat_Rating__c  = 30, '1 Hot',
IF( Account_Heat_Rating__c = 20, '2 Warm',
IF( Account_Heat_Rating__c = 10, '3 Viable',
'4 Dead'
)))</formula>
    <label>Behavior Status</label>
    <type>Text</type>
</CustomField>