unpackaged/main/default/objects/Account/fields/Billing_Lat__c.field-meta.xml
<CustomField>
    <fullName>Billing_Lat__c</fullName>
    <description>Billing Address Latitude</description>
    <formula>BillingLatitude</formula>
    <inlineHelpText>Billing Address Latitude</inlineHelpText>
    <label>Billing Lat</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>