unpackaged/main/default/objects/Account/fields/Billing_Long__c.field-meta.xml
<CustomField>
    <fullName>Billing_Long__c</fullName>
    <description>Billing Address Longitude</description>
    <formula>BillingLongitude</formula>
    <inlineHelpText>Billing Address Longitude</inlineHelpText>
    <label>Billing Long</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>