unpackaged/main/default/objects/Account/fields/Clearbit_Company_Tech__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Company_Tech__c</fullName>
    <label>Clearbit: Company Tech</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>