unpackaged/main/default/objects/Account/fields/Clearbit_Grafana_tag__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Grafana_tag__c</fullName>
    <formula>CONTAINS(cbit__Clearbit__r.cbit__CompanyTech__c, "grafana")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clearbit Grafana tag</label>
    <type>Checkbox</type>
</CustomField>