unpackaged/main/default/objects/Account/fields/Clearbit_WoW_change__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_WoW_change__c</fullName>
    <label>Clearbit WoW % change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>