unpackaged/main/default/objects/Account/fields/ClearbitEstimatedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ClearbitEstimatedRevenue__c</fullName>
    <label>Clearbit Estimated Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>