unpackaged/main/default/objects/Account/fields/ClearbitIndustryGroup__c.field-meta.xml
<CustomField>
    <fullName>ClearbitIndustryGroup__c</fullName>
    <label>Clearbit Industry Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>