unpackaged/main/default/objects/Account/fields/ClearbitSector__c.field-meta.xml
<CustomField>
    <fullName>ClearbitSector__c</fullName>
    <label>Clearbit Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>