unpackaged/main/default/objects/Account/fields/ClearbitSubIndustry__c.field-meta.xml
<CustomField>
    <fullName>ClearbitSubIndustry__c</fullName>
    <label>Clearbit Sub Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>