unpackaged/main/default/objects/Account/fields/Commercial_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Multiplier__c</fullName>
    <formula>IF(
  OR(Current_Pipeline_Amount__c &gt;250000, Committed_ARR__c &gt;250000), 2,

IF(
  OR(Current_Pipeline_Amount__c &gt;100000, Committed_ARR__c &gt;100000), 1.5,

IF(
  OR(Current_Pipeline_Amount__c &gt;0, Committed_ARR__c &gt;0), 1.25,1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Commercial Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>