unpackaged/main/default/objects/Account/fields/Committed_ARR__c.field-meta.xml
<CustomField>
    <fullName>Committed_ARR__c</fullName>
    <label>Committed ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>