unpackaged/main/default/objects/Account/fields/Committed_ARR_Score__c.field-meta.xml
<CustomField>
    <fullName>Committed_ARR_Score__c</fullName>
    <formula>IF ( Committed_ARR__c  &gt;= 250000, 20,
IF ( Committed_ARR__c  &gt;= 100000, 15,
IF ( Committed_ARR__c  &gt;= 50000, 10,
IF ( Committed_ARR__c  &lt; 50000, 5, 5))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committed ARR Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>