unpackaged/main/default/objects/Account/fields/Committed_MRR__c.field-meta.xml
<CustomField>
    <fullName>Committed_MRR__c</fullName>
    <description>This is the Committed MRR (Committed ARR / 12)</description>
    <formula>Committed_ARR__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Committed MRR (Committed ARR / 12)</inlineHelpText>
    <label>Committed MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>