unpackaged/main/default/objects/Account/fields/Company_Revenue_Score__c.field-meta.xml
<CustomField>
    <fullName>Company_Revenue_Score__c</fullName>
    <formula>IF ( ClearbitEstimatedRevenue__c = "$10B+", 80,
IF ( ClearbitEstimatedRevenue__c = "$1B-$10B", 60,
IF ( ClearbitEstimatedRevenue__c = "$500M-$1B", 40,
IF ( ClearbitEstimatedRevenue__c = "$250M-$500M", 40, 20))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Revenue Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>