unpackaged/main/default/objects/Account/fields/contract_type_id__c.field-meta.xml
<CustomField>
    <fullName>contract_type_id__c</fullName>
    <label>contract_type_id</label>
    <type>TextArea</type>
</CustomField>