unpackaged/main/default/objects/Account/fields/Count_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Count_Campaign_Members__c</fullName>
    <description>This field counts the number of Campaign Members are related to an Account using the Matched Account field. It is populated by DLRS.</description>
    <inlineHelpText>This field counts the number of Campaign Members are related to an Account using the Matched Account field. It is populated by DLRS.</inlineHelpText>
    <label>Count Campaign Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>