unpackaged/main/default/objects/Account/fields/Count_of_Lost_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Lost_Opps__c</fullName>
    <description>Counts the number of lost Opportunities related to the account. 
Used in Account status formula.</description>
    <label>Count of Lost Opps</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>