unpackaged/main/default/objects/Account/fields/Count_of_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Won_Opps__c</fullName>
    <description>Counts number of closed won opportunities associated with the account. 
Used in Account Status formula.</description>
    <label>Count of Won Opps</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>