unpackaged/main/default/objects/Account/fields/Current_Assigned_Territory__c.field-meta.xml
<CustomField>
    <fullName>Current_Assigned_Territory__c</fullName>
    <description>The territory that this account is currently assigned to.</description>
    <inlineHelpText>The territory that this account is currently assigned to.</inlineHelpText>
    <label>Current Assigned Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>