unpackaged/main/default/objects/Account/fields/Current_Pipeline_ACV_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Pipeline_ACV_Score__c</fullName>
    <formula>IF ( Current_Pipeline_Amount__c  &gt;= 250000, 60,
IF ( Current_Pipeline_Amount__c &gt;= 100000, 45,
IF ( Current_Pipeline_Amount__c &gt;= 25000, 30,
IF ( Current_Pipeline_Amount__c &lt; 25000, 15, 15))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Pipeline ACV Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>