unpackaged/main/default/objects/Account/fields/Current_Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Pipeline_Amount__c</fullName>
    <label>Current Pipeline Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Qualified, Discovery, Evaluation, Verbal Commit/Tech Win, Contracting/Negotiation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>