unpackaged/main/default/objects/Account/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>IF( admin_panel_link__c  &lt;&gt; "-", TRUE, FALSE)</formula>
    <label>Current User</label>
    <type>Checkbox</type>
</CustomField>