unpackaged/main/default/objects/Account/fields/Customer_Folder__c.field-meta.xml
<CustomField>
    <fullName>Customer_Folder__c</fullName>
    <description>Link to customer's folder in google drive</description>
    <label>Customer Folder</label>
    <type>Url</type>
</CustomField>