unpackaged/main/default/objects/Account/fields/Dashboard_Grafana__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Grafana__c</fullName>
    <description>Count of 'raised hands' for Dashboard / Grafana. This is populated by a scheduled Account Flow.</description>
    <inlineHelpText>Count of 'raised hands' for Dashboard / Grafana.</inlineHelpText>
    <label># Dashboard / Grafana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>