unpackaged/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <description>Duns number of Account</description>
    <inlineHelpText>Duns number of Account</inlineHelpText>
    <label>DUNS #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>