unpackaged/main/default/objects/Account/fields/DUNSUltimateParent__c.field-meta.xml
<CustomField>
    <fullName>DUNSUltimateParent__c</fullName>
    <description>This is the DUNS number of the ultimate parent.</description>
    <formula>BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.DUNS__c,
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.DUNS__c,
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.DUNS__c,
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.Parent.DUNS__c,
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Parent.DUNS__c,
BLANKVALUE(Parent.Parent.Parent.Parent.Parent.DUNS__c,
BLANKVALUE(Parent.Parent.Parent.Parent.DUNS__c,
BLANKVALUE(Parent.Parent.Parent.DUNS__c,
BLANKVALUE(Parent.Parent.DUNS__c,
BLANKVALUE(Parent.DUNS__c,
DUNS__c))))))))))</formula>
    <inlineHelpText>This is the DUNS number of the ultimate parent.</inlineHelpText>
    <label>DUNS # (Ultimate Parent)</label>
    <type>Text</type>
</CustomField>