unpackaged/main/default/objects/Account/fields/Emissary_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Emissary_Engagement_Date__c</fullName>
    <label>Emissary Engagement Date</label>
    <type>Date</type>
</CustomField>