unpackaged/main/default/objects/Account/fields/Employee_Count_Score__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count_Score__c</fullName>
    <formula>IF ( NumberOfEmployees &gt;= 10000, 80,
IF ( NumberOfEmployees &gt;= 5000, 60,
IF ( NumberOfEmployees &gt;= 1000, 40,20)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Count Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>