unpackaged/main/default/objects/Account/fields/fid1__c.field-meta.xml
<CustomField>
    <fullName>fid1__c</fullName>
    <label>Product (old)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GrafanaCloud</fullName>
            </value>
            <value>
                <fullName>Pro Support</fullName>
            </value>
            <value>
                <fullName>worldPing</fullName>
            </value>
            <value>
                <fullName>Enterprise Subscription</fullName>
            </value>
            <value>
                <fullName>metricTank</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>