unpackaged/main/default/objects/Account/fields/fidaddress__c.field-meta.xml
<CustomField>
    <fullName>fidaddress__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>