unpackaged/main/default/objects/Account/fields/Firmographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Firmographic_Score__c</fullName>
    <description>This is the aggregate of the Employee Count Score, Revenue Score, and HGI Intensity Score. Values should range from 50 - 200.</description>
    <formula>Employee_Count_Score__c  +   HGI_Intensity_Score__c +  Company_Revenue_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the aggregate of the Employee Count Score, Revenue Score, and HGI Intensity Score. Values should range from 50 - 200.</inlineHelpText>
    <label>Firmographic Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>