unpackaged/main/default/objects/Account/fields/flexfield__c.field-meta.xml
<CustomField>
    <fullName>flexfield__c</fullName>
    <description>Field to tag opportunities for Ops purposes</description>
    <inlineHelpText>Field to tag opportunities for Ops purposes</inlineHelpText>
    <label>flexfield</label>
    <type>TextArea</type>
</CustomField>