unpackaged/main/default/objects/Account/fields/Fortune_Rank__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Rank__c</fullName>
    <description>The rank of the account based on the current fortune 500 ranking.</description>
    <inlineHelpText>The rank of the account based on the current fortune 500 ranking.</inlineHelpText>
    <label>Fortune Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>