unpackaged/main/default/objects/Account/fields/gcom_org_type__c.field-meta.xml
<CustomField>
    <fullName>gcom_org_type__c</fullName>
    <label>G.Com Org Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gcom_org_type</valueSetName>
    </valueSet>
</CustomField>