unpackaged/main/default/objects/Account/fields/Grafana_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Grafana_Cloud__c</fullName>
    <description>Count of 'raised hands' for Grafana Cloud. Populated by a scheduled Account Flow.</description>
    <inlineHelpText>Count of 'raised hands' for Grafana Cloud.</inlineHelpText>
    <label># Grafana Cloud</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>