unpackaged/main/default/objects/Account/fields/Grafana_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Grafana_Enterprise__c</fullName>
    <description>Count of 'raised hands' for Grafana Enterprise. This is populated by a scheduled Account Flow.</description>
    <inlineHelpText>Count of 'raised hands' for Grafana Enterprise.</inlineHelpText>
    <label># Grafana Enterprise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>