unpackaged/main/default/objects/Account/fields/HGI_Intensity_Score__c.field-meta.xml
<CustomField>
    <fullName>HGI_Intensity_Score__c</fullName>
    <formula>IF ( HGI_Total_Intensity__c  &gt;= 300, 40,
IF ( HGI_Total_Intensity__c &gt;= 50, 30,
IF ( HGI_Total_Intensity__c &gt;= 1, 20,10)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HGI Intensity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>