unpackaged/main/default/objects/Account/fields/HGI_Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>HGI_Last_Verified_Date__c</fullName>
    <description>HG Insights last verified date of Grafana or Prometheus Intensity</description>
    <inlineHelpText>HG Insights last verified date of Grafana or Prometheus Intensity</inlineHelpText>
    <label>HGI Last Verified Date</label>
    <type>Date</type>
</CustomField>