unpackaged/main/default/objects/Account/fields/HGI_Total_Intensity__c.field-meta.xml
<CustomField>
    <fullName>HGI_Total_Intensity__c</fullName>
    <description>HG Insights Total intensity Score (Grafana + Prometheus)</description>
    <inlineHelpText>HG Insights Total intensity Score (Grafana + Prometheus)</inlineHelpText>
    <label>HGI Total Intensity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>