unpackaged/main/default/objects/Account/fields/HGI_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HGI_Total_Revenue__c</fullName>
    <description>HG Insights Total Company Revenue</description>
    <inlineHelpText>HG Insights Total Company Revenue</inlineHelpText>
    <label>HGI Total Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>