unpackaged/main/default/objects/Account/fields/ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>ID_18_digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This translates the ID into the 18 digit ID</inlineHelpText>
    <label>ID (18 digit)</label>
    <type>Text</type>
</CustomField>