unpackaged/main/default/objects/Account/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional Services Team</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Self-Implemented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>