unpackaged/main/default/objects/Account/fields/Intacct_Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Tax_Group__c</fullName>
    <label>Intacct Tax Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NY-07000</fullName>
            </value>
            <value>
                <fullName>NY-07500</fullName>
            </value>
            <value>
                <fullName>NY-08000</fullName>
            </value>
            <value>
                <fullName>NY-08125</fullName>
            </value>
            <value>
                <fullName>NY-08250</fullName>
            </value>
            <value>
                <fullName>NY-08375</fullName>
            </value>
            <value>
                <fullName>NY-08500</fullName>
            </value>
            <value>
                <fullName>NY-08625</fullName>
            </value>
            <value>
                <fullName>NY-08750</fullName>
            </value>
            <value>
                <fullName>NY-08875</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>