unpackaged/main/default/objects/Account/fields/LeanData_Mapped_SDR__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Mapped_SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is utilized in the leandata configuration to pull in the user values.</description>
    <inlineHelpText>This is utilized in the leandata configuration to pull in the user values.</inlineHelpText>
    <label>LeanData Mapped SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LeanData_Mapped_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>