unpackaged/main/default/objects/Account/fields/Logs__c.field-meta.xml
<CustomField>
    <fullName>Logs__c</fullName>
    <description>Count of 'raised hands' for Logs. This is populated by a scheduled Account Flow.</description>
    <inlineHelpText>Count of 'raised hands' for Logs.</inlineHelpText>
    <label># Logs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>