unpackaged/main/default/objects/Account/fields/Mapped_SDR_ID__c.field-meta.xml
<CustomField>
    <fullName>Mapped_SDR_ID__c</fullName>
    <formula>IF(ISBLANK(Override_Mapped_SDR_Lookup__c),Owner.Mapped_SDR__c,Override_Mapped_SDR_Lookup__c )</formula>
    <label>Mapped SDR ID</label>
    <type>Text</type>
</CustomField>