unpackaged/main/default/objects/Account/fields/Mapped_SDR_Name__c.field-meta.xml
<CustomField>
    <fullName>Mapped_SDR_Name__c</fullName>
    <formula>IF(ISBLANK( Override_Mapped_SDR_Lookup__c ), Owner.Mapped_SDR__r.FirstName &amp;" "&amp;  Owner.Mapped_SDR__r.LastName,  Override_Mapped_SDR_Lookup__r.FirstName &amp;" "&amp; Override_Mapped_SDR_Lookup__r.LastName)</formula>
    <label>Mapped SDR Name</label>
    <type>Text</type>
</CustomField>