unpackaged/main/default/objects/Account/fields/Matched_Lead_Opt_Ins__c.field-meta.xml
<CustomField>
    <fullName>Matched_Lead_Opt_Ins__c</fullName>
    <label>Matched Lead Opt-Ins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>