unpackaged/main/default/objects/Account/fields/Meeting_Count_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Count_Last_30_Days__c</fullName>
    <label>Meeting Count Last 30 Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>