unpackaged/main/default/objects/Account/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>Count of 'raised hands' for Metrics. This is populated by a scheduled Account Flow.</description>
    <inlineHelpText>Count of 'raised hands' for Metrics.</inlineHelpText>
    <label># Metrics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>