unpackaged/main/default/objects/Account/fields/Most_Recent_Contact_Request__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contact_Request__c</fullName>
    <description>This field captures the Date/Time of the most recent contact request for an Account - as defined by Campaign Membership to a 'Contact Request' Campaign. This field is populated and maintained by a DLRS.</description>
    <inlineHelpText>This field captures the Date/Time of the most recent contact request for an Account - as defined by Campaign Membership to a 'Contact Request' Campaign. This field is populated and maintained by a DLRS.</inlineHelpText>
    <label>Most Recent Contact Request</label>
    <type>DateTime</type>
</CustomField>