unpackaged/main/default/objects/Account/fields/Most_Recent_New_Renewal_Opp__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_New_Renewal_Opp__c</fullName>
    <label>Most Recent Closed Won New/Renewal Opp</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business, Renewal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Deal Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>