unpackaged/main/default/objects/Account/fields/Opt_In_Count__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Count__c</fullName>
    <description>Number of Opt-ins for related Contacts.</description>
    <inlineHelpText>Number of Opt-ins for related Contacts.</inlineHelpText>
    <label>Contact Opt In Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>