unpackaged/main/default/objects/Account/fields/Opt_In_Leads_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Leads_Contacts__c</fullName>
    <description>This is the sum of contacts and matched leads who have an opt in status</description>
    <formula>Matched_Lead_Opt_Ins__c  +  Opt_In_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opt In Leads + Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>