unpackaged/main/default/objects/Account/fields/Opt_In_Score__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Score__c</fullName>
    <description>This field scores the # of Optins on the account
&gt; 10=100, 6-10=75, 1-5=50, 0=25</description>
    <formula>IF(Opt_In_Leads_Contacts__c &gt;= 11, 80,
IF(Opt_In_Leads_Contacts__c &gt;= 6, 60,
IF(Opt_In_Leads_Contacts__c &gt;= 1, 40,20)))</formula>
    <label>Opt In Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>