unpackaged/main/default/objects/Account/fields/orgtrial_amount__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_amount__c</fullName>
    <description>This field is updated from the gcom integration to push over the amount of an orgtrial</description>
    <label>orgtrial_amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>