unpackaged/main/default/objects/Account/fields/Override_Mapped_SDR_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Override_Mapped_SDR_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override Mapped SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MappedSDR</relationshipName>
    <type>Lookup</type>
</CustomField>