unpackaged/main/default/objects/Account/fields/Potential_Rev_Available__c.field-meta.xml
<CustomField>
    <fullName>Potential_Rev_Available__c</fullName>
    <formula>AnnualRevenue * 0.00001</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Rev Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>