unpackaged/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grafana Cloud</fullName>
            </value>
            <value>
                <fullName>Grafana Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>